--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 
 	<head>
 		<title>Disney 2019</title>
-		<script src="jquery-3.2.0.min.js"></script>
-		<script src="jquery.touchSwipe.min.js"></script>
-		<script src="main_script.js?v2oi45678uqwoi32"></script>
-		<link rel="stylesheet" type="text/css" href="style.css?v=34534lkfjos">
+		<script src="scripts/jquery-3.2.0.min.js"></script>
+		<script src="scripts/jquery.touchSwipe.min.js"></script>
+		<script src="scripts/main_script.js?v2oi45678uqwoi32"></script>
+		<link rel="stylesheet" type="text/css" href="styles/style.css?v=34534lkfjos">
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=stretch">
 		<!--Apple-->
 		<link rel="apple-touch-startup-image" href="launch.png">
