--- a/v2/index.html
+++ b/v2/index.html
@@ -3,16 +3,16 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Disney 2019</title>
-		<script src="scripts/jquery-3.2.0.min.js"></script>
-		<script src="scripts/jquery.touchSwipe.min.js"></script>
-		<script src="scripts/moment.min.js"></script>
-		<script src="scripts/main_script.js?03c61b00"></script>
-		<script src="scripts/js.cookie-2.2.0.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="styles/style.css?v=f0c3f38f">
+		<script src="../js/jquery-3.2.0.min.js"></script>
+		<script src="../js/jquery.touchSwipe.min.js"></script>
+		<script src="../js/moment.min.js"></script>
+		<script src="../js/js.cookie-2.2.0.min.js"></script>
+		<script src="js/main_script.js?03c61b00"></script>
+		<link rel="stylesheet" type="text/css" href="css/style.css?v=f0c3f38f">
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=stretch">
 		<!--Apple-->
-		<link rel="apple-touch-startup-image" href="launch.png">
-		<link rel="apple-touch-icon" href="apple-touch-icon.png">
+		<link rel="apple-touch-startup-image" href="../assets/launch.png">
+		<link rel="apple-touch-icon" href="../assets/apple-touch-icon.png">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	</head>
@@ -24,10 +24,10 @@
 			<input type="button" id="done-button" />
 		</div>
 		<div id="instructions-container">
-			<img src="fischmore_add_to_home_screen.jpg" />
+			<img src="../assets/fischmore_add_to_home_screen.jpg" />
 		</div>
 		<div id='container'>
-			<img id="disney-image" src="images/1.jpg" />
+			<img id="disney-image" src="../images/1.jpg" />
 			<div id='innerContainer'>
 				<div id='countdown' class='base countdown'>7</div>
 				<div id='daysUntil' class='base daysuntil'>
