--- a/v2/index.html
+++ b/v2/index.html
@@ -7,8 +7,8 @@
 		<script src="../js/jquery.touchSwipe.min.js"></script>
 		<script src="../js/moment.min.js"></script>
 		<script src="../js/js.cookie-2.2.0.min.js"></script>
-		<script src="js/main_script.js?03c61b00"></script>
-		<link rel="stylesheet" type="text/css" href="css/style.css?v=f0c3f38f">
+		<script src="js/main_script.js?v=1960e452"></script>
+		<link rel="stylesheet" type="text/css" href="css/style.css?v=200ab3db">
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=stretch">
 		<!--Apple-->
 		<link rel="apple-touch-startup-image" href="../assets/launch.png">
