--- a/v2/index.html
+++ b/v2/index.html
@@ -7,11 +7,17 @@
 		<script src="../js/jquery.touchSwipe.min.js"></script>
 		<script src="../js/moment.min.js"></script>
 		<script src="../js/js.cookie-2.2.0.min.js"></script>
-		<script src="js/main_script.js?v=1960e452"></script>
+		<script src="js/main_script.js?v=1e22765e"></script>
 		<link rel="stylesheet" type="text/css" href="css/style.css?v=200ab3db">
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=stretch">
 		<!--Apple-->
-		<link rel="apple-touch-startup-image" href="../assets/launch.png">
+		<link rel="apple-touch-startup-image" href="../assets/splash/launch-640x1136.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+		<link rel="apple-touch-startup-image" href="../assets/splash/launch-750x1294.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+		<link rel="apple-touch-startup-image" href="../assets/splash/launch-1242x2148.png" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+		<link rel="apple-touch-startup-image" href="../assets/splash/launch-1125x2436.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+		<link rel="apple-touch-startup-image" href="../assets/splash/launch-1536x2048.png" media="(min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
+		<link rel="apple-touch-startup-image" href="../assets/splash/launch-1668x2224.png" media="(min-device-width: 834px) and (max-device-width: 834px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
+		<link rel="apple-touch-startup-image" href="../assets/splash/launch-2048x2732.png" media="(min-device-width: 1024px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
 		<link rel="apple-touch-icon" href="../assets/apple-touch-icon.png">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
