--- a/v2/index.html
+++ b/v2/index.html
@@ -33,6 +33,8 @@
 			<img src="../assets/fischmore_add_to_home_screen.jpg" />
 		</div>
 		<div id='container'>
+			<div id="left-navigation" class="navigation"></div>
+			<div id="right-navigation" class="navigation"></div>
 			<img id="disney-image" src="../images/1.jpg" />
 			<div id='innerContainer'>
 				<div id='countdown' class='base countdown'>7</div>
@@ -41,7 +43,5 @@
 					<br /><span id='disney'>Disney</span></div>
 			</div>
 		</div>
-		
 	</body>
-
 </html>
