--- a/index.html
+++ b/index.html
@@ -3,35 +3,55 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Disney 2019</title>
-		<script src="scripts/jquery-3.2.0.min.js"></script>
-		<script src="scripts/jquery.touchSwipe.min.js"></script>
-		<script src="scripts/moment.min.js"></script>
-		<script src="scripts/main_script.js?v2oi45678uqwoi32"></script>
-		<script src="scripts/js.cookie-2.2.0.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="styles/style.css?v=34534lkfjos">
-		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=stretch">
+		<script src="js/jquery-3.2.0.min.js"></script>
+		<script src="js/moment.min.js"></script>
+		<script src="js/js.cookie-2.2.0.min.js"></script>
+		<script src="js/main_script.js?v=fc0014d059b1690d1fe225c6ab6508e4"></script>
+		<link rel="stylesheet" type="text/css" href="css/style.css?v=fc0014d059b1690d1fe225c6ab6508e4">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=stretch">
 		<!--Apple-->
-		<link rel="apple-touch-startup-image" href="launch.png">
-		<link rel="apple-touch-icon" href="apple-touch-icon.png">
+		<link rel="apple-touch-startup-image" href="assets/splash/launch-640x1136.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+		<link rel="apple-touch-startup-image" href="assets/splash/launch-750x1294.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+		<link rel="apple-touch-startup-image" href="assets/splash/launch-1242x2148.png" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+		<link rel="apple-touch-startup-image" href="assets/splash/launch-1125x2436.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+		<link rel="apple-touch-startup-image" href="assets/splash/launch-1536x2048.png" media="(min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
+		<link rel="apple-touch-startup-image" href="assets/splash/launch-1668x2224.png" media="(min-device-width: 834px) and (max-device-width: 834px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
+		<link rel="apple-touch-startup-image" href="assets/splash/launch-2048x2732.png" media="(min-device-width: 1024px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
+		<link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	</head>
 
 	<body>
 		<div id="date-picker-container">
 			<p>Arrival Date</p>
 			<input type="date" id="date-picker" />
+			<input type="button" id="done-button" />
 		</div>
-		<img id="instructions" src="fischmore_add_to_home_screen.jpg" />
+		<div id="instructions-container">
+			<img src="assets/fischmore_add_to_home_screen.jpg" />
+		</div>
 		<div id='container'>
+			<div id="controls-container">
+					<div class="control-container">
+						<div id="calendar-control" class="control"></div>
+					</div>
+					<div class="control-container">
+						<div id="random-control" class="control"></div>
+					</div>
+					<div class="control-container">
+						<div id="move-control" class="control"></div>
+					</div>
+			</div>
+			<div id="left-navigation" class="navigation"></div>
+			<div id="right-navigation" class="navigation"></div>
+			<img id="disney-image" src="images/1.jpg" />
 			<div id='innerContainer'>
 				<div id='countdown' class='base countdown'>7</div>
 				<div id='daysUntil' class='base daysuntil'>
-					<span>days left until</span>
-					<br />Disney</div>
+					<span id='static-label'>days left until</span>
+					<br /><span id='disney'>Disney</span></div>
 			</div>
 		</div>
-		
 	</body>
-
 </html>
