--- a/index.html
+++ b/index.html
@@ -57,5 +57,6 @@
 					<br /><span id='disney'>Disney</span></div>
 			</div>
 		</div>
+		<script src="js/draggable.js"></script>
 	</body>
 </html>
