--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<script src="js/jquery-3.2.0.min.js"></script>
 		<script src="js/moment.min.js"></script>
 		<script src="js/js.cookie-2.2.0.min.js"></script>
-		<script src="js/main_script.js?v=416d1aa76e5afdb2beed6f42d4a145b9"></script>
-		<link rel="stylesheet" type="text/css" href="css/style.css?v=416d1aa76e5afdb2beed6f42d4a145b9">
+		<script src="js/main_script.js?v=d1ff182ee5c9efce4019750f70"></script>
+		<link rel="stylesheet" type="text/css" href="css/style.css?v=d1ff182ee5c9efce4019750f70">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=stretch">
 		<!--Apple-->
 		<link rel="apple-touch-startup-image" href="assets/splash/launch-640x1136.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
@@ -58,5 +58,13 @@
 			</div>
 		</div>
 		<script src="js/draggable.js"></script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-71446564-8"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'UA-71446564-8');
+		</script>
 	</body>
 </html>
